@@ -12,6 +12,9 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -63,26 +66,24 @@ class FaultSchedulerIntegrationTest {
         setUp();
         
         // 准备测试数据 - 网络延迟故障
-        Map<String, Object> faultSpec = Map.of(
-                "spec", Map.of(
-                        "experiments", List.of(
-                                Map.of(
-                                        "scope", "container",
-                                        "target", "network",
-                                        "action", "delay",
-                                        "desc", "container network delay test",
-                                        "matchers", List.of(
-                                                Map.of("name", "names", "value", List.of("test-pod")),
-                                                Map.of("name", "namespace", "value", List.of("default")),
-                                                Map.of("name", "container-names", "value", List.of("test-container")),
-                                                Map.of("name", "interface", "value", List.of("eth0")),
-                                                Map.of("name", "time", "value", List.of("100")),
-                                                Map.of("name", "offset", "value", List.of("10"))
-                                        )
-                                )
-                        )
-                )
+        Map<String, Object> faultSpec = new HashMap<>();
+        Map<String, Object> spec = new HashMap<>();
+        Map<String, Object> experiment = new HashMap<>();
+        experiment.put("scope", "container");
+        experiment.put("target", "network");
+        experiment.put("action", "delay");
+        experiment.put("desc", "container network delay test");
+        List<Map<String, Object>> matchers = Arrays.asList(
+                createMatcher("names", "test-pod"),
+                createMatcher("namespace", "default"),
+                createMatcher("container-names", "test-container"),
+                createMatcher("interface", "eth0"),
+                createMatcher("time", "100"),
+                createMatcher("offset", "10")
         );
+        experiment.put("matchers", matchers);
+        spec.put("experiments", Collections.singletonList(experiment));
+        faultSpec.put("spec", spec);
         
         String requestBody = objectMapper.writeValueAsString(faultSpec);
         
@@ -102,11 +103,10 @@ class FaultSchedulerIntegrationTest {
         setUp();
         
         // 准备无效的测试数据
-        Map<String, Object> invalidSpec = Map.of(
-                "spec", Map.of(
-                        "invalid", "spec"
-                )
-        );
+        Map<String, Object> invalidSpec = new HashMap<>();
+        Map<String, Object> invalidSpecContent = new HashMap<>();
+        invalidSpecContent.put("invalid", "spec");
+        invalidSpec.put("spec", invalidSpecContent);
         
         String requestBody = objectMapper.writeValueAsString(invalidSpec);
         
@@ -162,21 +162,19 @@ class FaultSchedulerIntegrationTest {
         setUp();
         
         // 测试只传 spec 的情况
-        Map<String, Object> specOnly = Map.of(
-                "experiments", List.of(
-                        Map.of(
-                                "scope", "pod",
-                                "target", "cpu",
-                                "action", "fullload",
-                                "desc", "pod cpu fullload test",
-                                "matchers", List.of(
-                                        Map.of("name", "names", "value", List.of("test-pod")),
-                                        Map.of("name", "namespace", "value", List.of("default")),
-                                        Map.of("name", "cpu-percent", "value", List.of("80"))
-                                )
-                        )
-                )
+        Map<String, Object> specOnly = new HashMap<>();
+        Map<String, Object> experiment2 = new HashMap<>();
+        experiment2.put("scope", "pod");
+        experiment2.put("target", "cpu");
+        experiment2.put("action", "fullload");
+        experiment2.put("desc", "pod cpu fullload test");
+        List<Map<String, Object>> matchers2 = Arrays.asList(
+                createMatcher("names", "test-pod"),
+                createMatcher("namespace", "default"),
+                createMatcher("cpu-percent", "80")
         );
+        experiment2.put("matchers", matchers2);
+        specOnly.put("experiments", Collections.singletonList(experiment2));
         
         String requestBody = objectMapper.writeValueAsString(specOnly);
         
@@ -194,30 +192,32 @@ class FaultSchedulerIntegrationTest {
         setUp();
         
         // 测试传完整 CR 的情况
-        Map<String, Object> fullCR = Map.of(
-                "apiVersion", "chaosblade.io/v1alpha1",
-                "kind", "ChaosBlade",
-                "metadata", Map.of(
-                        "name", "will-be-overridden",
-                        "labels", Map.of("test", "integration")
-                ),
-                "spec", Map.of(
-                        "experiments", List.of(
-                                Map.of(
-                                        "scope", "container",
-                                        "target", "process",
-                                        "action", "kill",
-                                        "desc", "kill container process test",
-                                        "matchers", List.of(
-                                                Map.of("name", "names", "value", List.of("test-pod")),
-                                                Map.of("name", "namespace", "value", List.of("default")),
-                                                Map.of("name", "container-names", "value", List.of("test-container")),
-                                                Map.of("name", "process", "value", List.of("java"))
-                                        )
-                                )
-                        )
-                )
+        Map<String, Object> fullCR = new HashMap<>();
+        fullCR.put("apiVersion", "chaosblade.io/v1alpha1");
+        fullCR.put("kind", "ChaosBlade");
+
+        Map<String, Object> metadata = new HashMap<>();
+        metadata.put("name", "will-be-overridden");
+        Map<String, Object> labels = new HashMap<>();
+        labels.put("test", "integration");
+        metadata.put("labels", labels);
+        fullCR.put("metadata", metadata);
+
+        Map<String, Object> spec3 = new HashMap<>();
+        Map<String, Object> experiment3 = new HashMap<>();
+        experiment3.put("scope", "container");
+        experiment3.put("target", "process");
+        experiment3.put("action", "kill");
+        experiment3.put("desc", "kill container process test");
+        List<Map<String, Object>> matchers3 = Arrays.asList(
+                createMatcher("names", "test-pod"),
+                createMatcher("namespace", "default"),
+                createMatcher("container-names", "test-container"),
+                createMatcher("process", "java")
         );
+        experiment3.put("matchers", matchers3);
+        spec3.put("experiments", Collections.singletonList(experiment3));
+        fullCR.put("spec", spec3);
         
         String requestBody = objectMapper.writeValueAsString(fullCR);
         
@@ -253,8 +253,16 @@ class FaultSchedulerIntegrationTest {
         // 测试空的路径参数
         mockMvc.perform(get("/api/faults//status"))
                 .andExpect(status().isNotFound());
-        
+
         mockMvc.perform(delete("/api/faults/"))
                 .andExpect(status().isNotFound());
+    }
+
+    // 辅助方法：创建 matcher Map
+    private Map<String, Object> createMatcher(String name, String value) {
+        Map<String, Object> matcher = new HashMap<>();
+        matcher.put("name", name);
+        matcher.put("value", Collections.singletonList(value));
+        return matcher;
     }
 }
